# human-brain-interface-demo

./: .gitignore  PROGRESS.md  README.md
.github/workflows/: pages.yml
anima-intention-action/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
anima-intention-action/.github/: PULL_REQUEST_TEMPLATE.md
anima-intention-action/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
anima-intention-action/docs/: 00-overview.md
anima-intention-action/docs/bci-adaptation/: 01-six-layer-bci.md  02-skill-registry-assistive.md  03-five-factor-bci-mapping.md  04-test-and-check-medical.md  05-caregiver-dual-user.md  06-safety-compliance.md
anima-intention-action/docs/preserved/: 10-ANIMA认知框架设计.md  12-ALICE项目的启发.md  anima-public-readme.md
anima-intention-action/examples/: minimal_pipeline.py
anima-intention-action/src/: README.md
anima-intention-action/src/anima_intention_action/: __init__.py  l0_neural.py  l1_parser.py  l2_planner.py  l3_skill.py  l4_adapter.py  l5_assessment.py  taskspec.py  test_and_check.py
anima-intention-action/tests/: test_pipeline.py
demo/core/: .env.example  .gitignore  pyproject.toml
demo/core/assets/scenes/: hospital_ward.xml
demo/core/scripts/: export_schemas.py
demo/core/src/: config.py  main.py
demo/core/src/anima/: l0_input.py  l1_parser.py  l2_planner.py  l3_skill.py  l5_assessment.py  taskspec.py
demo/core/src/llm/: provider.py
demo/core/src/llm/prompts/: intent_parser.md  intent_vocab.json
demo/core/src/routes/: intent.py  sim.py  ws.py
demo/core/src/sim/: __init__.py  manager.py
demo/core/tests/: test_l0_input.py  test_l1_parser.py  test_l2_planner.py  test_l5_goa.py  test_taskspec.py
demo/shared/schemas/: five_factors.json  intent_token.json  pea_record.json  taskspec.json
demo/sim/: README.md
demo/web/: package-lock.json  package.json
demo/web/src/app/: globals.css  layout.tsx  page.tsx
demo/web/src/lib/: api.ts  store.ts  ws.ts
demo/web/src/types/: taskspec.ts
github-page/: README.md  astro.config.mjs  package-lock.json  package.json
github-page/src/components/layout/: Footer.astro  Nav.astro
github-page/src/config/: site.ts
github-page/src/layouts/: BaseLayout.astro
github-page/src/pages/: index.astro
github-page/src/styles/: global.css
(+18 files in other folders)
